fix subheading left alignment

--- a/_sass/brand.scss
+++ b/_sass/brand.scss
@@ -104,7 +104,7 @@ p {
 }
 
 .content-body-section h1,
-h2 {
+.content-body-section h2 {
     text-align: left !important;
 }
 
